<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardView_margin"
    app:cardCornerRadius="5dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/defaultCardColor"
    android:focusable="true">

    <LinearLayout
        android:paddingStart="32dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/icon_cloth"/>

            <LinearLayout
                android:layout_marginStart="64dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cloth_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/defaultTextColor"
                    android:text="@string/cloth"/>

                <TextView
                    android:id="@+id/cloth_txt"
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/defaultTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/icon_sport"/>

            <LinearLayout
                android:layout_marginStart="64dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sport_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/defaultTextColor"
                    android:text="@string/sport"/>

                <TextView
                    android:textSize="12sp"
                    android:id="@+id/sport_txt"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/defaultTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/icon_travel"/>

            <LinearLayout
                android:layout_marginStart="64dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/travel_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/defaultTextColor"
                    android:text="@string/travel"/>

                <TextView
                    android:textSize="12sp"
                    android:id="@+id/travel_txt"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/defaultTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/icon_flu"/>

            <LinearLayout
                android:layout_marginStart="64dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/flu_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/defaultTextColor"
                    android:text="@string/flu"/>

                <TextView
                    android:textSize="12sp"
                    android:id="@+id/flu_txt"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/defaultTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>